--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,4 +10,7 @@
   border-radius: 5px;
   height: 500px;
   box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.4);
+  text-align: center;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
